trilium-theme-melon-3.css
/* 
MELON 3 by https://github.com/raphwriter/
A theme for Trilium (https://github.com/zadam/trilium)
*/


/* font declarations */

/* open-sans*/
@font-face {
  font-family: 'Open Sans';
  font-style: normal;
  font-weight: 400;
  src: url('/custom/fonts/open-sans-v17-latin-regular.woff') format('woff'); 
}

@font-face {
  font-family: 'Open Sans';
  font-style: italic;
  font-weight: 400;
  src: url('/custom/fonts/open-sans-v17-latin-italic.woff') format('woff'); 
}

@font-face {
  font-family: 'Open Sans';
  font-style: italic;
  font-weight: 600;
  src: url('/custom/fonts/open-sans-v17-latin-600italic.woff') format('woff'); 
}

@font-face {
  font-family: 'Open Sans';
  font-style: normal;
  font-weight: 600;
  src: url('/custom/fonts/open-sans-v17-latin-600.woff') format('woff'); 
}

/* Fira Sans */
@font-face {
  font-family: 'Fira Sans';
  font-style: normal;
  font-weight: 300;
  src: url('/custom/fonts/firasans-light.woff') format('woff');
}

@font-face {
  font-family: 'Fira Sans';
  font-style: normal;
  font-weight: 600;
  src: url('/custom/fonts/FiraSans-SemiBold.woff') format('woff');
}

@font-face {
  font-family: 'Fira Mono';
  font-style: normal;
  font-weight: 400;
  src: url('/custom/fonts/FiraMono-Regular.woff') format('woff');
}

/* roboto-slab */
@font-face {
  font-family: 'Roboto Slab';
  font-style: normal;
  font-weight: 200;
  src: url('/custom/fonts/roboto-slab-v11-latin-200.woff') format('woff'); 
}

@font-face {
  font-family: 'Roboto Slab';
  font-style: normal;
  font-weight: 300;
  src: url('/custom/fonts/roboto-slab-v11-latin-300.woff') format('woff'); 
}

@font-face {
  font-family: 'Roboto Slab';
  font-style: normal;
  font-weight: 400;
  src: url('/custom/fonts/roboto-slab-v11-latin-regular.woff') format('woff'); 
}

@font-face {
  font-family: 'Roboto Slab';
  font-style: normal;
  font-weight: 600;
  src: url('/custom/fonts/roboto-slab-v11-latin-600.woff') format('woff'); 
}


html {
    /* color variables */
    --color-blue-dark: #264653;
    --color-blue-dark-text: #a0b7c1;
    --color-blue-light: #2a9d8f;
    --color-blue-light-alpha: #2aa19270;
    --color-blue-light-text: #f0f4f4;
    --color-yellow: #e9c46a; 
    --color-yellow-text: #63583c;
    --color-yellow-bg-alpha: #e9c46a1a; 
    --color-sidebar-yellow-dark: #e1dbce;
    --color-orange-light: #f4a261;
    --color-orange-light-text: #c96a2e;
    --color-orange-dark: #e76f51;
    --color-orange-dark-text: #f2dcd6; 
    --color-gray: #d6d6d6;
    --color-gray-text: #333;
    --color-gray-light: #f5f5f5;
    --color-gray-light-alpha: rgba(199, 199, 199, 0.2);
    --color-gray-light-text: #999;
    --color-gray-dark: #666;
    --color-gray-dark-text: #666;
    --color-paper: #ecebe3;
    --color-paper-text: #555;
    --color-paper-light: #fcfcfa;
    --color-shadow: rgba(181, 181, 181, 0.6);
    
    --border-radius-small: 3px;
    --border-radius-tabs: 3px;
    --border-standard: 1px solid var(--color-gray);
    --border-accent: 2px solid var(--color-orange-dark);
    --border-accent-alt: 2px solid var(--color-blue-light);
    --border-accent-muted: 2px solid var(--color-gray-dark);
    --border-accent-light: 1px dotted var(--color-blue-dark-text);
    
    --shadow-standard: 3px 4px 3px -3px var(--color-shadow);
    
    --active-item-text-color: #f2dcd6;
    --active-item-background-color: #e76f51;

}

/* hyperlinks */
body.theme-melon-theme-3 div#root-widget a,
body.theme-melon-theme-3 div#root-widget a:visited,
body.theme-melon-theme-3 div#root-widget a:hover {
    color: var(--color-blue-dark);
}

/* font variables */
body.theme-melon-theme-3 div#root-widget {
    --main-font-family-sans: 'Open Sans', 'Fira Sans', 'Source Sans Pro', 'Liberation Sans', Arial, Sans-serif;
    --main-font-family-serif: 'Roboto Slab', Georgia, Serif;
    --main-font-family-mono: 'Fira Mono', 'Source Code Pro', Courier, Monospace;
    --detail-text-font-family: 'Open Sans', 'Fira Sans', Arial, Sans-serif;

    --font-headers: 'Roboto Slab', Georgia, Serif;
    --font-body: 'Open Sans', 'Fira Sans', 'Source Sans Pro', 'Liberation Sans', Arial, Sans-serif;
    --font-code: 'Fira Mono', 'Source Code Pro', Courier, Monospace;
}

/* ============================================================================= */
/* ================================ TOP PANE =================================== */
/* ============================================================================= */

/* selects first "component"-classed child of #root-widget */
/* which happens to be the tab-bar */
body.theme-melon-theme-3 #root-widget > div.component:first-of-type,
body.theme-melon-theme-3 .standard-top-widget {
    align-items: center;
    /*! border-bottom: 1px solid lightgray; */
    min-height: 50px;

}

body.theme-melon-theme-3 #root-widget > div.component:first-of-type .global-menu-wrapper {
    align-self: center;
    border: none;
    border-right: 1px dotted var(--color-blue-light);
    margin: 0 15px 0 15px;
    padding: 0 5px;
}

/* make top all blue */
body.theme-melon-theme-3 #root-widget > div.component:first-of-type,
body.theme-melon-theme-3 #root-widget > div.component:first-of-type .global-menu-wrapper {
    background: var(--color-blue-light);
} 

body.theme-melon-theme-3 .note-tab-row-container {
    background: var(--color-blue-light);
}

body.theme-melon-theme-3 .tab-row-filler {
    background: var(--color-blue-light);
}

/* hide tabbar bottom border thingie */
body.theme-melon-theme-3 #root-widget > div.component:first-of-type .tab-row-filler .tab-row-border {
    display: none;
}

/* TAB / BUTTON [CLOSE TAB] */
body.theme-melon-theme-3 #root-widget > div.component:first-of-type .note-tab-row .note-tab .note-tab-close {
    color: var(--color-blue-light);
    border: var(--border-standard);
    border-radius: var(--border-radius-small);
    margin-left: 5px;
}

/* TAB / BUTTON [CLOSE TAB] / ICON */
body.theme-melon-theme-3 .note-tab-row .note-tab .note-tab-close span {
    font-size: 16px;
    top: -2px;
}
/* ... */

